--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,6 +23,8 @@
  <li>Nano Editor</li>
 <li>Notepad ++</li>
 <li>Vi Editor</li>
+  <li>Visual Studio Code</li>
+  <li> sublime merge </li>
 <p>You can find the best and most beautiful hd nature wallpapers of Pexels on this page. Feel free to download all of these desktop background pictures of nature for free. You can use them as wallpaper and background images for your Windows and Mac OS computers as well as your Android and iPhone smartphones.</p>
 <a href="wel.html">click Hire</a>
 <i class="fa fa-cloud"></i>
