--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,6 +32,7 @@
 <i class="fa fa-car"></i>
 <i class="fa fa-file"></i>
 <i class="fa fa-bars"></i>
+ <i class="fa fa-bars"></i>
 
 </body>
 </html>
